--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,6 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'base.html' %}
 
-{% block styles -%}
-    {{super()}}
-    <link rel="stylesheet" type="text/css"
-          href="{{url_for('static', filename='css/styles.css')}}">
-{% endblock %}
+
 
 {% block title %}Coffee and Wifi{% endblock %}
 {% block content %}
